fixes spacing on about icons and projects bg gradient

--- a/css/index.css
+++ b/css/index.css
@@ -136,7 +136,7 @@ a:visited {
 /* Slide 2/Projects /////////////////////////////////////////*/
 
 #projects {
-    background: linear-gradient( rgba(0, 0, 0, .5), rgba(0, 0, 0, .8)), url('../img/water.jpg');
+    background: linear-gradient( rgba(0, 0, 0, .25), rgba(0, 0, 0, .8)), url('../img/water.jpg');
     background-attachment: fixed;
     box-shadow: inset 0px 5px 20px 0px rgba(0,0,0,1);
     background-clip: initial;
